--- a/PhilanRClient/package.json
+++ b/PhilanRClient/package.json
@@ -61,9 +61,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && cd build && mv index.html 200.html && surge ./ app.moneytracker.cc && surge ./ demo.moneytracker.cc"
-  },
+    "eject": "react-scripts eject"
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
